Comentários e Finalização das seções

--- a/SGBD/SQLite.html
+++ b/SGBD/SQLite.html
@@ -58,12 +58,12 @@
                                 </td>
                             </tr>
                             <tr>
-                                <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                <!-- Tipo de licença -->
                                 <td><strong>Tipo de licença</strong></td>
                                 <td>Código aberto (gratuita).</td>
                             </tr>
                             <tr>
-                                <!-- Histórico (breve historia da sgbd em questao -->
+                                <!-- Histórico (breve história da SGBD em questão) -->
                                 <td><strong>Histórico</strong></td>
                                 <td>
                                    Foi desenvolvida por D. Richard Hipp em 17 de agosto de 2000.
@@ -87,6 +87,7 @@
                                 </td>
                             </tr>
                             <tr>
+                                <!-- Curiosidades -->
                                 <td><strong>Curiosidade</strong></td>
                                 <td>
                                     O SQLite é recomendado para usos mais "simples" em geral, como:
@@ -119,6 +120,7 @@
     </main>
     <footer>
         <div id="divfooter">
+            <!-- Interface ao usuário e prints de tela -->
             <h3>
                 Clique nessa seta para voltar à pagina anterior com todos os SGBD's:
             </h3>
