--- a/SGBD/access.html
+++ b/SGBD/access.html
@@ -47,7 +47,7 @@
                                 <td>2019 (16.0) / (24 de setembro de 2018)</td>
                             </tr>
                             <tr>
-                                <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                <!-- Tipo de licença -->
                                 <td><strong>Tipo de licença</strong></td>
                                 <td>Sua licença é chamada de '<em>Shareware</em>', 
                                     ou seja, por princípio é disponibilizada gratuitamente, podendo 
@@ -55,7 +55,7 @@
                                     tempo de uso.</td>
                             </tr>
                             <tr>
-                                <!-- Histórico (breve hiatoria da sgbd em questao -->
+                                <!-- Histórico (breve história da SGBD em questão) -->
                                 <td><strong>Histórico</strong></td>
                                 <td>Em 1992 a Microsoft lançou seu 
                                     primeiro Sistema de Gerenciamento de Banco de Dados, 
@@ -79,6 +79,7 @@
                                 <td>Microsoft Windows</td>
                             </tr>
                             <tr>
+                                <!-- Curiosidades -->
                                 <td><strong>Curiosidade</strong></td>
                                 <td>Programadores iniciantes e usuários determinados podem usá-lo
                                     para construir aplicações simples, sem a necessidade
@@ -90,6 +91,7 @@
         </section>
         <section>
             <br><br><br>
+            <!-- Interface ao usuário e prints de tela -->
             <div id="img1">
                 <div>
                     <h3 id="print">
