--- a/SGBD/firebird.html
+++ b/SGBD/firebird.html
@@ -58,14 +58,14 @@
                                 </td>
                             </tr>
                             <tr>
-                                <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                <!-- Tipo de licença -->
                                 <td><strong>Tipo de licença</strong></td>
                                 <td>IPL(<a class="firebird" href="http://www.firebirdsql.org/en/licensing/" target="_blank">saiba mais</a>) 
                                     e IDPL (<a class="firebird" href="http://www.firebirdsql.org/en/licensing/" target="_blank">saiba mais</a>) - 
                                 Ambas gratuitas para uso.</td>
                             </tr>
                             <tr>
-                                <!-- Histórico (breve historia da sgbd em questao -->
+                                <!-- Histórico (breve história da SGBD em questão) -->
                                 <td><strong>Histórico</strong></td>
                                 <td>
                                     Firebird é baseado no código da InterBase.<br/> 
@@ -86,6 +86,7 @@
                                 </ul></td>
                             </tr>
                             <tr>
+                                <!-- Curiosidades -->
                                 <td><strong>Curiosidade</strong></td>
                                 <td>
                                 Uma versão mobile do Firebird está sendo atualmente testada, no sistema
@@ -99,6 +100,7 @@
         <section>
             <br><br><br>
             <div id="img1">
+                <!-- Interface ao usuário e prints de tela -->
                 <div>
                     <h3 id="print">
                         Print da tela do usuário
