--- a/SGBD/mariaDB.html
+++ b/SGBD/mariaDB.html
@@ -57,14 +57,14 @@
                                 </ul></td>
                             </tr>
                             <tr>
-                                <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                <!-- Tipo de licença -->
                                 <td><strong>Tipo de licença</strong></td>
                                 <td>GPLv2 (<a class="linkmdb" href="https://choosealicense.com/licenses/gpl-2.0/" target="_blank">saiba mais</a>) 
                                     e LGPLv2.1(<a class="linkmdb" href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.en.html" target="_blank">
                                     saiba mais</a>) - Ambas gratuitas.</td>
                             </tr>
                             <tr>
-                                <!-- Histórico (breve historia da sgbd em questao -->
+                                <!-- Histórico (breve história da SGBD em questão) -->
                                 <td><strong>Histórico</strong></td>
                                 <td>
                                     MariaDB foi criada em dezembro de 2012, por Michael Widenius e David Axmark e
@@ -82,6 +82,7 @@
                                 <td>Microsoft Windows, Linux e macOS.</td>
                             </tr>
                             <tr>
+                                <!-- Curiosidades -->
                                 <td><strong>Curiosidade</strong></td>
                                 <td>
                                     MariaDb foi escrito nas seguintes Linguagens:
@@ -100,6 +101,7 @@
         <section>
             <br><br><br>
             <div id="img1">
+                <!-- Interface ao usuário e prints de tela -->
                 <div>
                     <h3 id="print">
                         Print da tela do usuário
