--- a/SGBD/mySQL.html
+++ b/SGBD/mySQL.html
@@ -59,15 +59,15 @@
                                 </td>
                             </tr>
                             <tr>
-                                <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                <!-- Tipo de licença -->
                                 <td><strong>Tipo de licença</strong></td>
                                 <td>
-                                    É gratuito se o programa utilizado para acessar o MySQl for uma GPL.
+                                    É gratuito caso o programa utilizado para acessar o MySQl for uma GPL.
                                     Caso contrário, uma licença comercial deverá ser adquirida.
                                 </td>
                             </tr>
                             <tr>
-                                <!-- Histórico (breve historia da sgbd em questao -->
+                                <!-- Histórico (breve história da SGBD em questão) -->
                                 <td><strong>Histórico</strong></td>
                                 <td>
                                    A SGBD MySQL foi lançada no dia 23 de maio de 1995, sendo criada
@@ -89,6 +89,7 @@
                                 </td>
                             </tr>
                             <tr>
+                                <!-- Curiosidades -->
                                 <td><strong>Curiosidade</strong></td>
                                 <td>
                                     Em 2008, a desenvolvedora da MySQL foi adquirida pela Sun Microsystems
@@ -103,6 +104,7 @@
         <section>
             <br><br><br>
             <div id="img1">
+                <!-- Interface ao usuário e prints de tela -->
                 <div>
                     <h3 id="print">
                         Print da tela do usuário
