--- a/SGBD/oracle.html
+++ b/SGBD/oracle.html
@@ -52,14 +52,14 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                    <!-- Tipo de licença -->
                                     <td><strong>Tipo de licença</strong></td>
                                     <td>Sua licença é chamada de '<em>Software propeietário</em>', 
                                         que é um software que é licenciado com
                                         direitos exclusivos para o produtor.</td>
                                 </tr>
                                 <tr>
-                                    <!-- Histórico (breve hiatoria da sgbd em questao -->
+                                    <!-- Histórico (breve história da SGBD em questão) -->
                                     <td><strong>Histórico</strong></td>
                                     <td>Oracle surgiu por volta dos anos 1970, quando Larry Ellison
                                         visualizou uma oportunidade inédita para o protótipo de
@@ -94,6 +94,7 @@
             <section>
                 <br><br><br>
                 <div id="img1">
+                    <!-- Interface ao usuário e prints de tela -->
                     <div>
                         <h3 id="print">
                             Print da tela do usuário
