--- a/SGBD/postgre.html
+++ b/SGBD/postgre.html
@@ -63,7 +63,7 @@
                                 <td>Código aberto (gratuita).</td>
                             </tr>
                             <tr>
-                                <!-- Histórico (breve historia da sgbd em questao -->
+                                <!-- Histórico (breve história da SGBD em questão) -->
                                 <td><strong>Histórico</strong></td>
                                 <td>
                                     Essa SGBD foi desenvolvida na Universidade de Berkeley - Califórnia,
@@ -88,6 +88,7 @@
                                 </td>
                             </tr>
                             <tr>
+                                <!-- Curiosidades -->
                                 <td><strong>Curiosidade</strong></td>
                                 <td>
                                 Na versão 8.3.0, algumas linguagens de programação foram utilizadas
@@ -106,6 +107,7 @@
         <section>
             <br><br><br>
             <div id="img1">
+                <!-- Interface ao usuário e prints de tela -->
                 <div>
                     <h3 id="print">
                         Print da tela do usuário
