--- a/index.html
+++ b/index.html
@@ -49,22 +49,21 @@
     <!-- Pesquisa sobre as sgbd's: -->
    <!-- Access -->
    <!-- SQL server -->
-   <!-- oracle -->
+   <!-- Oracle -->
    <!-- mySQL -->
    <!-- MariaDb -->
    <!-- Postgre -->
-   <!-- firebird -->
-   <!-- sqlite -->
+   <!-- Firebird -->
+   <!-- SQLite -->
 
    <!-- O que: -->
    <!-- Fabricante -->
-   <!-- Versoes mais atuais -->
-   <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+   <!-- Versões mais atuais -->
+   <!-- Tipo de licença -->
    <!-- Valor da licença -->
-   <!-- Histórico (breve hiatoria da sgbd em questao -->
+   <!-- Histórico (breve história da SGBD em questão) -->
    <!-- Plataforma (sistemas operacionais suportados) -->
-   <!-- Interface ao usuario e prints de tela -->
-   <!-- curiosidades -->
-    <script src="main.js"></script>
+   <!-- Interface ao usuário e prints de tela -->
+   <!-- Curiosidades -->
 </body>
 </html>
