--- a/SGBD/SQLServer.html
+++ b/SGBD/SQLServer.html
@@ -83,7 +83,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <!-- Histórico (breve historia da sgbd em questao -->
+                                <!-- Histórico (breve história da SGBD em questão) -->
                                 <td><strong>Histórico</strong></td>
                                 <td>
                                     O SQL Server foi criado em 1988, com a parceria de Microsoft e Sybase.
@@ -102,6 +102,7 @@
                                 </ul></td>
                             </tr>
                             <tr>
+                                <!-- Curiosidades -->
                                 <td><strong>Curiosidade</strong></td>
                                 <td>
                                 Podemos endereçar consultas com linguagens de programação, como:
@@ -131,6 +132,7 @@
     </main>
     <footer>
         <div id="divfooter">
+            <!-- Interface ao usuário e prints de tela -->
             <h3>
                 Clique nessa seta para voltar à pagina anterior com todos os SGBD's:
             </h3>
